# final-group11

./: .gitignore  LICENSE  Makefile  Part1.ipynb  Part2.ipynb  Part3.ipynb  README.md  ai_documentation.txt  contribution_statement.md  eda_data_cleaning.ipynb  environment.yml  knn.ipynb  logistic_regression.ipynb  main.ipynb  myst.yml  pyproject.toml  references.bib
.ipynb_checkpoints/: Part1-checkpoint.ipynb  README-checkpoint.md  ai_documentation-checkpoint.txt  contribution_statement-checkpoint.md
loan_tools/: __init__.py  fittools.py
loan_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
loan_tools/tests/: test_fittools.py
