[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loan_tools"
authors = [
  { name="Henry Liev", email="lievhenry@berkeley.edu" },
  { name="Aiden Wang", email="aidenjw@berkeley.edu"}
]
description = "This module provides tools for measuring model fitting performance for loan approval rates."
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "numpy==2.3",
    "pandas==2.3",
	"statsmodels==0.14",
    "scikit-learn>=1.3"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "loans"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/final-group11"
Issues = "https://github.com/UCB-stat-159-f25/final-group11/issues"

[tool.setuptools]
packages = ["loan_tools"]

[tool.setuptools.dynamic]
version = {attr = "loan_tools.__version__"}